--- a/blog.html
+++ b/blog.html
@@ -140,7 +140,7 @@
       <i class="fa fa-linkedin"></i>
 
     </div>
-    <p>made by <i class="fa fa-heart-o"></i><a href="http://priyanshupaliwal.42web.io">Priyanshu Paliwal</a><i class="fa fa-heart-o"></i> an easy site </p>
+    <p>made by <i class="fa fa-heart-o"></i><a href="https://www.linkedin.com/in/priyanshu-paliwal-017a6a262/">Priyanshu Paliwal</a><i class="fa fa-heart-o"></i> an easy site </p>
   </section>
 
 
